# suffix-array-rust

./: Cargo.toml  README.md
src/: array.rs  lib.rs
